--- a/pages/code/asdocs/all-index-A.html
+++ b/pages/code/asdocs/all-index-A.html
@@ -156,6 +156,20 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("AÂ
      Add all the elements in the other list.</td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/DisplayUtil.html#addChildAbove()">addChildAbove</a>(container, newChild, above) &mdash; Static method in class com.threerings.flash.<a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/DisplayUtil.html">DisplayUtil</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+     Adds newChild to container, directly above another child of the container.</td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/DisplayUtil.html#addChildBelow()">addChildBelow</a>(container, newChild, below) &mdash; Static method in class com.threerings.flash.<a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/DisplayUtil.html">DisplayUtil</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+     Adds newChild to container, directly below another child of the container.</td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/AnimationManager.html#addDisplayAnimation()">addDisplayAnimation</a>(disp) &mdash; Static method in class com.threerings.flash.<a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/AnimationManager.html">AnimationManager</a></td>
 </tr>
 <tr>
