--- a/pages/code/asdocs/com/threerings/flash/DisplayUtil.html
+++ b/pages/code/asdocs/com/threerings/flash/DisplayUtil.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../print.css" type="text/css" media="print">
-<meta content="DisplayUtil,com.threerings.flash.DisplayUtil,applyToHierarchy,centerRectInRect,createPointSorter,dumpHierarchy,findInHierarchy,fitRectInRect,positionBounds,positionBoundsRelative,positionRect,sortDisplayChildren" name="keywords">
+<meta content="DisplayUtil,com.threerings.flash.DisplayUtil,addChildAbove,addChildBelow,applyToHierarchy,centerRectInRect,createPointSorter,dumpHierarchy,findInHierarchy,fitRectInRect,positionBounds,positionBoundsRelative,positionRect,sortDisplayChildren" name="keywords">
 <title>com.threerings.flash.DisplayUtil</title>
 </head>
 <body>
@@ -49,6 +49,22 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <table id="summaryTableMethod" class="summaryTable " cellpadding="3" cellspacing="0">
 <tr>
 <th>&nbsp;</th><th colspan="2">Method</th><th class="summaryTableOwnerCol">Defined&nbsp;by</th>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#addChildAbove()">addChildAbove</a>(container:DisplayObjectContainer, newChild:DisplayObject, above:DisplayObject):void</div>
+<div class="summaryTableDescription">[static]
+     Adds newChild to container, directly above another child of the container.</div>
+</td><td class="summaryTableOwnerCol">DisplayUtil</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#addChildBelow()">addChildBelow</a>(container:DisplayObjectContainer, newChild:DisplayObject, below:DisplayObject):void</div>
+<div class="summaryTableDescription">[static]
+     Adds newChild to container, directly below another child of the container.</div>
+</td><td class="summaryTableOwnerCol">DisplayUtil</td>
 </tr>
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
@@ -152,10 +168,66 @@ showHideInherited();
 <div class="MainContent">
 <a name="methodDetail"></a>
 <div class="detailSectionHeader">Method detail</div>
+<a name="addChildAbove()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">addChildAbove</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public static function addChildAbove(container:DisplayObjectContainer, newChild:DisplayObject, above:DisplayObject):void</code><p>
+     Adds newChild to container, directly above another child of the container.
+     </p><span class="label">Parameters</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">container</span>:DisplayObjectContainer</code></td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">newChild</span>:DisplayObject</code></td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">above</span>:DisplayObject</code></td>
+</tr>
+</table>
+</div>
+<a name="addChildBelow()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">addChildBelow</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public static function addChildBelow(container:DisplayObjectContainer, newChild:DisplayObject, below:DisplayObject):void</code><p>
+     Adds newChild to container, directly below another child of the container.
+     </p><span class="label">Parameters</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">container</span>:DisplayObjectContainer</code></td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">newChild</span>:DisplayObject</code></td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">below</span>:DisplayObject</code></td>
+</tr>
+</table>
+</div>
 <a name="applyToHierarchy()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
-<td class="detailHeaderName">applyToHierarchy</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td>
+<td class="detailHeaderName">applyToHierarchy</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
 </tr>
 </table>
 <div class="detailBody">
