--- a/pages/code/contrib/asdocs/all-index-D.html
+++ b/pages/code/contrib/asdocs/all-index-D.html
@@ -307,6 +307,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("DÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/PersistenceManager.html#_debugLogging">_debugLogging</a> &mdash; Property in class com.whirled.contrib.platformer.persist.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/PersistenceManager.html">PersistenceManager</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/graphics/class-list.html');" href="com/whirled/contrib/card/graphics/CardSprite.html#_deck">_deck</a> &mdash; Property in class com.whirled.contrib.card.graphics.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/graphics/class-list.html');" href="com/whirled/contrib/card/graphics/CardSprite.html">CardSprite</a></td>
 </tr>
 <tr>
@@ -871,6 +877,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("DÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/ShotSprite.html#displayAir()">displayAir</a>() &mdash; Method in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/ShotSprite.html">ShotSprite</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/util/class-list.html');" href="com/whirled/contrib/platformer/util/Metrics.html#DISPLAY_HEIGHT">DISPLAY_HEIGHT</a> &mdash; Static property in class com.whirled.contrib.platformer.util.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/util/class-list.html');" href="com/whirled/contrib/platformer/util/Metrics.html">Metrics</a></td>
 </tr>
 <tr>
@@ -1072,18 +1084,6 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("DÂ
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/FlyTask.html#DRAG">DRAG</a> &mdash; Property in class com.whirled.contrib.platformer.board.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/FlyTask.html">FlyTask</a></td>
-</tr>
-<tr>
-<td width="20"></td><td></td>
-</tr>
-<tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('ghostbusters/client/class-list.html');" href="ghostbusters/client/DraggableSprite.html">DraggableSprite</a> &mdash; Class in package <a onclick="javascript:loadClassListFrame('ghostbusters/client/class-list.html');" href="ghostbusters/client/package-detail.html">ghostbusters.client</a></td>
-</tr>
-<tr>
-<td width="20"></td><td></td>
-</tr>
-<tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('ghostbusters/client/class-list.html');" href="ghostbusters/client/DraggableSprite.html#DraggableSprite()">DraggableSprite</a>(ctrl) &mdash; Constructor in class ghostbusters.client.<a onclick="javascript:loadClassListFrame('ghostbusters/client/class-list.html');" href="ghostbusters/client/DraggableSprite.html">DraggableSprite</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
