--- a/pages/code/contrib/asdocs/all-index-P.html
+++ b/pages/code/contrib/asdocs/all-index-P.html
@@ -47,18 +47,6 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("PÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('ghostbusters/client/class-list.html');" href="ghostbusters/client/DraggableSprite.html#_paintable">_paintable</a> &mdash; Property in class ghostbusters.client.<a onclick="javascript:loadClassListFrame('ghostbusters/client/class-list.html');" href="ghostbusters/client/DraggableSprite.html">DraggableSprite</a></td>
-</tr>
-<tr>
-<td width="20"></td><td></td>
-</tr>
-<tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('ghostbusters/client/class-list.html');" href="ghostbusters/client/DraggableSprite.html#_painted">_painted</a> &mdash; Property in class ghostbusters.client.<a onclick="javascript:loadClassListFrame('ghostbusters/client/class-list.html');" href="ghostbusters/client/DraggableSprite.html">DraggableSprite</a></td>
-</tr>
-<tr>
-<td width="20"></td><td></td>
-</tr>
-<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/audio/class-list.html');" href="com/whirled/contrib/simplegame/audio/AudioControls.html#pan()">pan</a>(val) &mdash; Method in class com.whirled.contrib.simplegame.audio.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/audio/class-list.html');" href="com/whirled/contrib/simplegame/audio/AudioControls.html">AudioControls</a></td>
 </tr>
 <tr>
@@ -401,7 +389,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("PÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/PersistenceManager.html#PersistenceManager()">PersistenceManager</a>(gameCtrl, properties, debugLogging) &mdash; Constructor in class com.whirled.contrib.platformer.persist.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/PersistenceManager.html">PersistenceManager</a></td>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/PersistenceManager.html#PersistenceManager()">PersistenceManager</a>(gameCtrl, debugLogging) &mdash; Constructor in class com.whirled.contrib.platformer.persist.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/PersistenceManager.html">PersistenceManager</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
@@ -969,6 +957,36 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("PÂ
 <td width="20"></td><td> Events that apply to a PlayerSubControlServer.</td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/CookieManager.html#_playerId">_playerId</a> &mdash; Property in class com.whirled.contrib.platformer.persist.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/CookieManager.html">CookieManager</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/PropertyPrototype.html#_playerId">_playerId</a> &mdash; Property in class com.whirled.contrib.platformer.persist.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/PropertyPrototype.html">PropertyPrototype</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/PropertyPrototype.html#playerId">playerId</a> &mdash; Property in class com.whirled.contrib.platformer.persist.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/PropertyPrototype.html">PropertyPrototype</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/TrophyProperty.html#_playerId">_playerId</a> &mdash; Property in class com.whirled.contrib.platformer.persist.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/TrophyProperty.html">TrophyProperty</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/TrophyProperty.html#playerId">playerId</a> &mdash; Property in class com.whirled.contrib.platformer.persist.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/TrophyProperty.html">TrophyProperty</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/class-list.html');" href="com/whirled/contrib/card/Table.html#_playerIds">_playerIds</a> &mdash; Property in class com.whirled.contrib.card.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/class-list.html');" href="com/whirled/contrib/card/Table.html">Table</a></td>
 </tr>
 <tr>
@@ -1460,7 +1478,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("PÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/PropertyPrototype.html#PropertyPrototype()">PropertyPrototype</a>(name, type:<a href="com/whirled/contrib/platformer/persist/PropertyType.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist./class-list.html');">com.whirled.contrib.platformer.persist:PropertyType</a>, defaultValue) &mdash; Constructor in class com.whirled.contrib.platformer.persist.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/PropertyPrototype.html">PropertyPrototype</a></td>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/PropertyPrototype.html#PropertyPrototype()">PropertyPrototype</a>(name, type:<a href="com/whirled/contrib/platformer/persist/PropertyType.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist./class-list.html');">com.whirled.contrib.platformer.persist:PropertyType</a>, defaultValue, playerId) &mdash; Constructor in class com.whirled.contrib.platformer.persist.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/PropertyPrototype.html">PropertyPrototype</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
@@ -1528,6 +1546,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("PÂ
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/ColliderDetails.html#pushActor()">pushActor</a>(db:<a href="com/whirled/contrib/platformer/board/DynamicBounds.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board./class-list.html');">com.whirled.contrib.platformer.board:DynamicBounds</a>) &mdash; Method in class com.whirled.contrib.platformer.board.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/ColliderDetails.html">ColliderDetails</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/PieceSpriteFactory.html#pushCache()">pushCache</a>(name, o) &mdash; Static method in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/PieceSpriteFactory.html">PieceSpriteFactory</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
