--- a/pages/code/contrib/asdocs/all-index-T.html
+++ b/pages/code/contrib/asdocs/all-index-T.html
@@ -1255,7 +1255,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("TÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/TrophyProperty.html#TrophyProperty()">TrophyProperty</a>(name, gameCtrl) &mdash; Constructor in class com.whirled.contrib.platformer.persist.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/TrophyProperty.html">TrophyProperty</a></td>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/TrophyProperty.html#TrophyProperty()">TrophyProperty</a>(name, gameCtrl, playerId) &mdash; Constructor in class com.whirled.contrib.platformer.persist.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/persist/class-list.html');" href="com/whirled/contrib/platformer/persist/TrophyProperty.html">TrophyProperty</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
