--- a/pages/code/asdocs/com/whirled/game/LocalSubControl.html
+++ b/pages/code/asdocs/com/whirled/game/LocalSubControl.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../print.css" type="text/css" media="print">
-<meta content="LocalSubControl,com.whirled.game.LocalSubControl,addEventListener,clearScores,feedback,filter,getHeadShot,getSize,removeEventListener,setFrameRate,setMappedScores,setOccupantsLabel,setPlayerScores,setShowReplay,setStageQuality,showGameShop,showTrophies" name="keywords">
+<meta content="LocalSubControl,com.whirled.game.LocalSubControl,addEventListener,clearScores,feedback,filter,getHeadShot,getShareMemberId,getShareToken,getSize,removeEventListener,setFrameRate,setMappedScores,setOccupantsLabel,setPlayerScores,setShowReplay,setStageQuality,showGameLobby,showGameShop,showSharePage,showTrophies" name="keywords">
 <title>com.whirled.game.LocalSubControl</title>
 </head>
 <body>
@@ -118,6 +118,22 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
+<a class="signatureLink" href="#getShareMemberId()">getShareMemberId</a>():int</div>
+<div class="summaryTableDescription">
+     Retrieves the ID of the member who shared this game to the current player.</div>
+</td><td class="summaryTableOwnerCol">LocalSubControl</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#getShareToken()">getShareToken</a>():String</div>
+<div class="summaryTableDescription">
+     Retrieves the share token that was passed to the game.</div>
+</td><td class="summaryTableOwnerCol">LocalSubControl</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
 <a class="signatureLink" href="#getSize()">getSize</a>():Point</div>
 <div class="summaryTableDescription">
      Get the size of the game area, expressed as a Point
@@ -195,9 +211,26 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
+<a class="signatureLink" href="#showGameLobby()">showGameLobby</a>(multiplayerOnly:Boolean = true):void</div>
+<div class="summaryTableDescription">
+     Opens the game's multiplayer lobby on this player's machine.</div>
+</td><td class="summaryTableOwnerCol">LocalSubControl</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
 <a class="signatureLink" href="#showGameShop()">showGameShop</a>(itemType:String, catalogId:int = 0):void</div>
 <div class="summaryTableDescription">
      Opens the web page for this game's shop.</div>
+</td><td class="summaryTableOwnerCol">LocalSubControl</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#showSharePage()">showSharePage</a>(defmsg:String, token:String = ""):void</div>
+<div class="summaryTableDescription">
+     Instructs the game client to open the Share Game page, allowing the player to invite friends
+     to play this game.</div>
 </td><td class="summaryTableOwnerCol">LocalSubControl</td>
 </tr>
 <tr class="">
@@ -391,6 +424,10 @@ showHideInherited();
      want to display them in two places.
           The DisplayObject returned is always 80x60 pixels large. If the player's actual headshot
      is smaller than 80x60, it will be centered inside the 80x60 area.
+          Note: There is a weird flash security issue/bug that may prevent you from removing
+     this object from a parent. addChild(headshot) works, removeChild(headshot) works, but
+     calling getChildAt(index) or removeChildAt(index) using the index of the headshot will
+     throw a security error. Weird!
           </p><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
@@ -403,6 +440,43 @@ showHideInherited();
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="20"></td><td><code>DisplayObject</code></td>
+</tr>
+</table>
+</div>
+<a name="getShareMemberId()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">getShareMemberId</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public function getShareMemberId():int</code><p>
+     Retrieves the ID of the member who shared this game to the current player.  Returns 0 if the
+     player did not start the game via a shared link.
+     </p><p></p>
+<span class="label">Returns</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20"></td><td><code>int</code></td>
+</tr>
+</table>
+</div>
+<a name="getShareToken()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">getShareToken</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public function getShareToken():String</code><p>
+     Retrieves the share token that was passed to the game.  If the player entered into the game
+     via a URL that contained a token (provided by the game via showSharePage), this will return
+     that token, otherwise null.
+     </p><p></p>
+<span class="label">Returns</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20"></td><td><code>String</code></td>
 </tr>
 </table>
 </div>
@@ -575,6 +649,28 @@ showHideInherited();
 </tr>
 </table>
 </div>
+<a name="showGameLobby()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">showGameLobby</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public function showGameLobby(multiplayerOnly:Boolean = true):void</code><p>
+     Opens the game's multiplayer lobby on this player's machine. Please note this is only 
+     meaningful for games that support multiplayer.
+     
+     </p><span class="label">Parameters</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">multiplayerOnly</span>:Boolean</code> (default = <code>true</code>)<code></code> &mdash; Optional parameter: if this game supports both single- and 
+     multi-player games, a true value will only show multiplayer options (create table 
+     or join existing tables), and a false value will show the default
+     single- and multi-player options. Default value is true. 
+     </td>
+</tr>
+</table>
+</div>
 <a name="showGameShop()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -598,6 +694,34 @@ showHideInherited();
 <tr>
 <td width="20px"></td><td><code><span class="label">catalogId</span>:int</code> (default = <code>0</code>)<code></code> &mdash; the catalog id of a specific item to show or 0 to display the overview page
      of all items of the specified type.
+     </td>
+</tr>
+</table>
+</div>
+<a name="showSharePage()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">showSharePage</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public function showSharePage(defmsg:String, token:String = ""):void</code><p>
+     Instructs the game client to open the Share Game page, allowing the player to invite friends
+     to play this game.
+     </p><span class="label">Parameters</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">defmsg</span>:String</code> &mdash; Default message that will be included along with the game's URL when sent
+     to the player's friends.
+     </td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">token</span>:String</code> (default = "<code></code>")<code></code> &mdash; Optional token that will be included on the URL and eventually passed back to
+     the game when an invited friend goes to the URL.  This allows the game to start in
+     a different state than usual.
      </td>
 </tr>
 </table>
