--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/display/DynamicSprite.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/display/DynamicSprite.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="DynamicSprite,com.whirled.contrib.platformer.display.DynamicSprite,HIT_LENGTH,_disp,_dynamic,_hitFilter,_hitFilterIndex,_hitLeft,_particleCallback,_state,_static,changeState,findNode,findNodes,forceBack,generateAttachedEffect,generateParticleEffect,getDynamic,handleAdded,handleRemoved,onAdded,onRemoved,playState,recolorNodes,recolorNodesToColor,setParticleCallback,setStatic,showAlways,showHit,shutdown,update" name="keywords">
+<meta content="DynamicSprite,com.whirled.contrib.platformer.display.DynamicSprite,HIT_LENGTH,_disp,_dynamic,_hitFilter,_hitFilterIndex,_hitLeft,_particleCallback,_state,_static,changeState,clearDisp,findNode,findNodes,forceBack,generateAttachedEffect,generateParticleEffect,getDynamic,handleAdded,handleRemoved,onAdded,onRemoved,playState,recolorNodes,recolorNodesToColor,setParticleCallback,setStatic,showAlways,showHit,shutdown,update" name="keywords">
 <title>com.whirled.contrib.platformer.display.DynamicSprite</title>
 </head>
 <body>
@@ -182,6 +182,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
 <a class="signatureLink" href="#changeState()">changeState</a>(newState:String):void</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">DynamicSprite</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#clearDisp()">clearDisp</a>():void</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">DynamicSprite</td>
 </tr>
@@ -386,6 +393,15 @@ showHideInherited();
 <td width="20px"></td><td><code><span class="label">newState</span>:String</code></td>
 </tr>
 </table>
+</div>
+<a name="clearDisp()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">clearDisp</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected function clearDisp():void</code>
 </div>
 <a name="findNode()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
