--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/persist/CookieManager.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/persist/CookieManager.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="CookieManager,com.whirled.contrib.platformer.persist.CookieManager,VERSION,WRITE_DELAY,_debug,_gameCtrl,_lastWrite,_loaded,_properties,_propertyDefaults,_timer,log,loaded,cookiePropertyUpdated,dispatchLoaded,getProperty,gotCookie,writeCookie" name="keywords">
+<meta content="CookieManager,com.whirled.contrib.platformer.persist.CookieManager,VERSION,WRITE_DELAY,_debug,_gameCtrl,_lastWrite,_loaded,_playerId,_properties,_propertyDefaults,_timer,log,loaded,cookiePropertyUpdated,dispatchLoaded,getProperty,gotCookie,writeCookie" name="keywords">
 <title>com.whirled.contrib.platformer.persist.CookieManager</title>
 </head>
 <body>
@@ -83,6 +83,10 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </td><td class="summaryTableOwnerCol">CookieManager</td>
 </tr>
 <tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_playerId">_playerId</a> : int<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">CookieManager</td>
+</tr>
+<tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_properties">_properties</a> : HashMap<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">CookieManager</td>
 </tr>
@@ -106,7 +110,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="#CookieManager()">CookieManager</a>(gameCtrl:GameControl, properties:HashMap, debugLogging:Boolean = false)</div>
+<a class="signatureLink" href="#CookieManager()">CookieManager</a>(gameCtrl:GameControl, properties:HashMap, playerId:int = 0, debugLogging:Boolean = false)</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">CookieManager</td>
 </tr>
@@ -234,6 +238,15 @@ showHideInherited();
 <code>&nbsp;&nbsp;&nbsp;&nbsp;public function get loaded():Boolean</code>
 <br>
 </div>
+<a name="_playerId"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">_playerId</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected var _playerId:int</code>
+</div>
 <a name="_properties"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -270,7 +283,7 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public function CookieManager(gameCtrl:GameControl, properties:HashMap, debugLogging:Boolean = false)</code><span class="label">Parameters</span>
+<code>public function CookieManager(gameCtrl:GameControl, properties:HashMap, playerId:int = 0, debugLogging:Boolean = false)</code><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="20px"></td><td><code><span class="label">gameCtrl</span>:GameControl</code></td>
@@ -280,6 +293,12 @@ showHideInherited();
 </tr>
 <tr>
 <td width="20px"></td><td><code><span class="label">properties</span>:HashMap</code></td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">playerId</span>:int</code> (default = <code>0</code>)<code></code></td>
 </tr>
 <tr>
 <td class="paramSpacer">&nbsp;</td>
