--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/persist/PersistenceManager.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/persist/PersistenceManager.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="PersistenceManager,com.whirled.contrib.platformer.persist.PersistenceManager,_cookieManager,_eventMgr,_loaded,_trophyProperties,loaded,getProperty,loadingComplete,whenLoaded" name="keywords">
+<meta content="PersistenceManager,com.whirled.contrib.platformer.persist.PersistenceManager,_cookieManagers,_debugLogging,_eventMgr,_gameCtrl,_loaded,_trophyProperties,loaded,getProperty,getPropertyKey,getPrototypes,init,loadingComplete,whenLoaded" name="keywords">
 <title>com.whirled.contrib.platformer.persist.PersistenceManager</title>
 </head>
 <body>
@@ -67,13 +67,20 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <th>&nbsp;</th><th colspan="2">Property</th><th class="summaryTableOwnerCol">Defined&nbsp;by</th>
 </tr>
 <tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_cookieManager">_cookieManager</a> : <a href="../persist/CookieManager.html">CookieManager</a>
-<div class="summaryTableDescription"></div>
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_cookieManagers">_cookieManagers</a> : HashMap<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">PersistenceManager</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_debugLogging">_debugLogging</a> : Boolean<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">PersistenceManager</td>
 </tr>
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_eventMgr">_eventMgr</a> : <a href="../../../contrib/EventHandlerManager.html">EventHandlerManager</a>
 <div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">PersistenceManager</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_gameCtrl">_gameCtrl</a> : GameControl<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">PersistenceManager</td>
 </tr>
 <tr class="">
@@ -96,16 +103,18 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="#PersistenceManager()">PersistenceManager</a>(gameCtrl:GameControl, properties:Array, debugLogging:Boolean = false)</div>
+<a class="signatureLink" href="#PersistenceManager()">PersistenceManager</a>(gameCtrl:GameControl, debugLogging:Boolean = false)</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">PersistenceManager</td>
 </tr>
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="#getProperty()">getProperty</a>(name:String):<a href="../persist/PersistentProperty.html">PersistentProperty</a>
+<a class="signatureLink" href="#getProperty()">getProperty</a>(name:String, playerId:int = 0):<a href="../persist/PersistentProperty.html">PersistentProperty</a>
 </div>
-<div class="summaryTableDescription"></div>
+<div class="summaryTableDescription">
+     Server-side warning!  Any CookieProperties are essentially being read once at the game
+     start, and are currently not updated afterwards.</div>
 </td><td class="summaryTableOwnerCol">PersistenceManager</td>
 </tr>
 <tr class="">
@@ -128,7 +137,28 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="#loadingComplete()">loadingComplete</a>(... ignored):void</div>
+<a class="signatureLink" href="#getPropertyKey()">getPropertyKey</a>(name:String, playerId:int):String</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">PersistenceManager</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#getPrototypes()">getPrototypes</a>():Array</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">PersistenceManager</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#init()">init</a>():void</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">PersistenceManager</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#loadingComplete()">loadingComplete</a>():void</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">PersistenceManager</td>
 </tr>
@@ -141,14 +171,23 @@ showHideInherited();
 <div class="MainContent">
 <a name="propertyDetail"></a>
 <div class="detailSectionHeader">Property detail</div>
-<a name="_cookieManager"></a>
+<a name="_cookieManagers"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
-<td class="detailHeaderName">_cookieManager</td><td class="detailHeaderType">property</td>
+<td class="detailHeaderName">_cookieManagers</td><td class="detailHeaderType">property</td>
 </tr>
 </table>
 <div class="detailBody">
-<code>protected var _cookieManager:<a href="../persist/CookieManager.html">CookieManager</a></code>
+<code>protected var _cookieManagers:HashMap</code>
+</div>
+<a name="_debugLogging"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">_debugLogging</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected var _debugLogging:Boolean</code>
 </div>
 <a name="_eventMgr"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
@@ -158,6 +197,15 @@ showHideInherited();
 </table>
 <div class="detailBody">
 <code>protected var _eventMgr:<a href="../../../contrib/EventHandlerManager.html">EventHandlerManager</a></code>
+</div>
+<a name="_gameCtrl"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">_gameCtrl</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected var _gameCtrl:GameControl</code>
 </div>
 <a name="_loaded"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
@@ -198,16 +246,10 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public function PersistenceManager(gameCtrl:GameControl, properties:Array, debugLogging:Boolean = false)</code><span class="label">Parameters</span>
+<code>public function PersistenceManager(gameCtrl:GameControl, debugLogging:Boolean = false)</code><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="20px"></td><td><code><span class="label">gameCtrl</span>:GameControl</code></td>
-</tr>
-<tr>
-<td class="paramSpacer">&nbsp;</td>
-</tr>
-<tr>
-<td width="20px"></td><td><code><span class="label">properties</span>:Array</code></td>
 </tr>
 <tr>
 <td class="paramSpacer">&nbsp;</td>
@@ -226,10 +268,20 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public function getProperty(name:String):<a href="../persist/PersistentProperty.html">PersistentProperty</a></code><span class="label">Parameters</span>
+<code>public function getProperty(name:String, playerId:int = 0):<a href="../persist/PersistentProperty.html">PersistentProperty</a></code><p>
+     Server-side warning!  Any CookieProperties are essentially being read once at the game
+     start, and are currently not updated afterwards.  We'd need to add "refresh" functionality
+     to CookieManagers to deal with this - and we still wouldn't know when we have dirty data.
+     </p><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="20px"></td><td><code><span class="label">name</span>:String</code></td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">playerId</span>:int</code> (default = <code>0</code>)<code></code></td>
 </tr>
 </table>
 <p></p>
@@ -240,6 +292,58 @@ showHideInherited();
 </tr>
 </table>
 </div>
+<a name="getPropertyKey()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">getPropertyKey</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected function getPropertyKey(name:String, playerId:int):String</code><span class="label">Parameters</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">name</span>:String</code></td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">playerId</span>:int</code></td>
+</tr>
+</table>
+<p></p>
+<span class="label">Returns</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20"></td><td><code>String</code></td>
+</tr>
+</table>
+</div>
+<a name="getPrototypes()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">getPrototypes</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected function getPrototypes():Array</code>
+<p></p>
+<span class="label">Returns</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20"></td><td><code>Array</code></td>
+</tr>
+</table>
+</div>
+<a name="init()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">init</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected function init():void</code>
+</div>
 <a name="loadingComplete()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -247,12 +351,7 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>protected function loadingComplete(... ignored):void</code><span class="label">Parameters</span>
-<table border="0" cellspacing="0" cellpadding="0">
-<tr>
-<td width="20px"></td><td><code>... <span class="label">ignored</span></code></td>
-</tr>
-</table>
+<code>protected function loadingComplete():void</code>
 </div>
 <a name="whenLoaded()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
