--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/persist/TrophyProperty.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/persist/TrophyProperty.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="TrophyProperty,com.whirled.contrib.platformer.persist.TrophyProperty,_awardedThisSession,_gameCtrl,value,awardTrophy,hasTrophy" name="keywords">
+<meta content="TrophyProperty,com.whirled.contrib.platformer.persist.TrophyProperty,_awardedThisSession,_gameCtrl,_playerId,playerId,value,awardTrophy,hasTrophy" name="keywords">
 <title>com.whirled.contrib.platformer.persist.TrophyProperty</title>
 </head>
 <body>
@@ -66,6 +66,10 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </td><td class="summaryTableOwnerCol"><a href="PersistentProperty.html">PersistentProperty</a></td>
 </tr>
 <tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#playerId">playerId</a> : int<div class="summaryTableDescription">[read-only]</div>
+</td><td class="summaryTableOwnerCol">TrophyProperty</td>
+</tr>
+<tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#value">value</a> : Object<div class="summaryTableDescription">[read-only]</div>
 </td><td class="summaryTableOwnerCol">TrophyProperty</td>
 </tr>
@@ -98,6 +102,10 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol"><a class="signatureLink" href="PersistentProperty.html#_name">_name</a> : String<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol"><a href="PersistentProperty.html">PersistentProperty</a></td>
 </tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_playerId">_playerId</a> : int<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">TrophyProperty</td>
+</tr>
 </table>
 </div>
 <a name="methodSummary"></a>
@@ -110,7 +118,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="#TrophyProperty()">TrophyProperty</a>(name:String, gameCtrl:GameControl)</div>
+<a class="signatureLink" href="#TrophyProperty()">TrophyProperty</a>(name:String, gameCtrl:GameControl, playerId:int = 0)</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">TrophyProperty</td>
 </tr>
@@ -155,6 +163,27 @@ showHideInherited();
 <div class="detailBody">
 <code>protected var _gameCtrl:GameControl</code>
 </div>
+<a name="_playerId"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">_playerId</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected var _playerId:int</code>
+</div>
+<a name="playerId"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">playerId</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>playerId:int</code>&nbsp;&nbsp;[read-only]<span class="label">Implementation</span>
+<br>
+<code>&nbsp;&nbsp;&nbsp;&nbsp;public function get playerId():int</code>
+<br>
+</div>
 <a name="value"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -176,7 +205,7 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public function TrophyProperty(name:String, gameCtrl:GameControl)</code><span class="label">Parameters</span>
+<code>public function TrophyProperty(name:String, gameCtrl:GameControl, playerId:int = 0)</code><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="20px"></td><td><code><span class="label">name</span>:String</code></td>
@@ -186,6 +215,12 @@ showHideInherited();
 </tr>
 <tr>
 <td width="20px"></td><td><code><span class="label">gameCtrl</span>:GameControl</code></td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">playerId</span>:int</code> (default = <code>0</code>)<code></code></td>
 </tr>
 </table>
 </div>
