--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/piece/Shot.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/piece/Shot.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="Shot,com.whirled.contrib.platformer.piece.Shot,bigHit,damage,force,hit,hitEffect,miss,missEffect,rotateHit,source,ttl,shouldSpawn" name="keywords">
+<meta content="Shot,com.whirled.contrib.platformer.piece.Shot,bigHit,damage,force,hit,hitEffect,miss,missEffect,rotateHit,source,ttl,shouldSpawn,useCache" name="keywords">
 <title>com.whirled.contrib.platformer.piece.Shot</title>
 </head>
 <body>
@@ -277,6 +277,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol"><a href="Dynamic.html">Dynamic</a></td>
 </tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#useCache()">useCache</a>():Boolean</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">Shot</td>
+</tr>
 <tr class="hideInheritedMethod">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
@@ -458,6 +465,22 @@ showHideInherited();
 </table>
 <div class="detailBody">
 <code>public override function shouldSpawn():Boolean</code>
+<p></p>
+<span class="label">Returns</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20"></td><td><code>Boolean</code></td>
+</tr>
+</table>
+</div>
+<a name="useCache()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">useCache</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public override function useCache():Boolean</code>
 <p></p>
 <span class="label">Returns</span>
 <table border="0" cellspacing="0" cellpadding="0">
